# apertium-get

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  README.org  apertium-get  apertium-get.1  apertium-get.py  apertium-get.sh  help2man.sh
.github/workflows/: build.yaml
t/: incubator.expected  regression-tests  tests.sh  trunk.expected  unarg.expected
